src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Unique_ID__c</fullName>
        <description>18 digit ID unique to each case record</description>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Launch Team</description>
        <inlineHelpText>Used by the Launch Team</inlineHelpText>
        <label>PS Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that category QA has been performed - requested via BAP-3143.</description>
        <inlineHelpText>Has Category QA been performed?</inlineHelpText>
        <label>Category QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Restructure_Category_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSquad Unpacking type field</description>
        <label>zCategory Restructure / Category Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Support : categorization for case segmentation; selected by client upon web case submission and by ninja upon internal case creation.  Dependent on value in the Case Reason field and gives more detail into purpose of case</description>
        <inlineHelpText>Client Success case category.</inlineHelpText>
        <label>Support Category</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>301 Redirects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Integration Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Day Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned Cart Saver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account &amp; Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Disputes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Client No Oppty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Client Oppty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding/Editing Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adding MX Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics and Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics and Conversion (3rd Party)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics Tab (in app)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apps Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AusPost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auth.net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC Analytics - Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Owner__c</fullName>
        <label>Change Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Support Queue</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Out of Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Design Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Callback</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <externalId>true</externalId>
        <label>Chat Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the chat transcript was sent</description>
        <label>Chat Transcript Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Facing_Content__c</fullName>
        <inlineHelpText>Content which will be visible to Bigcommerce clients on our Support Portal</inlineHelpText>
        <label>Client Facing Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Client_Notification_Email__c</fullName>
        <description>Billing : Used in email alerts to the client; if unchecked, billing cases do not send updates to clients</description>
        <inlineHelpText>What email address will case open and closure notifications go to?
Set by hierarchy : Contact &gt; Lead &gt; Web Email &gt; Subscription Email</inlineHelpText>
        <label>Client Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <formula>IF(ISBLANK(TEXT(Opportunity__r.Account_Management_Services__c))&amp;&amp;ISBLANK(TEXT(Opportunity__r.ENT_Support__c)),
&quot;&quot;, 
IMAGE(&quot;resource/EnterpriseClient&quot;, &quot;Enterprise Client&quot;,20,110) 
)</formula>
        <label>Client Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_at_Creation__c</fullName>
        <description>Formula for WFRs : true if date/time closed = date/time opened</description>
        <formula>IF(ClosedDate = CreatedDate,TRUE,FALSE)</formula>
        <label>Closed at Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompetitorName__c</fullName>
        <description>Competitor that the client is switching to - for use in cancellation cases</description>
        <inlineHelpText>Competitor that the client is switching to - for use in cancellation cases if &quot;other&quot; is selected from the picklist</inlineHelpText>
        <label>Cancellation Competitor Name - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>Competitor that the client is leaving us for - for use in cancellation cases</description>
        <inlineHelpText>Competitor that the client is leaving us for - for use in cancellation cases</inlineHelpText>
        <label>Cancellation Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woo Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestashop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Cart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pixafy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Migrations : date BC team has finished the data migration</description>
        <inlineHelpText>Date the migration completes.</inlineHelpText>
        <label>Migration Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consultation_Hours_Available__c</fullName>
        <description>Provides the consultation hours available</description>
        <label>Consultation Hours Available</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Forever</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultation_Status__c</fullName>
        <description>Cancellations : used at time of migration from google doc to SF; may not be needed once cancellation case process is finalized</description>
        <inlineHelpText>Accepted : ??
Booked : time scheduled with Success Squad
Referral : needs booking</inlineHelpText>
        <label>zConsultation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Consultation Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting_Services__c</fullName>
        <description>Pulls the product names from the PS Opportunity on to the case</description>
        <inlineHelpText>Pulls the product names from the PS Opportunity on to the case</inlineHelpText>
        <label>zConsulting Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>Used as a mail merge for email templates</description>
        <formula>IF( Contact.FirstName &lt;&gt; NULL, Contact.FirstName, 
IF(  Opportunity__r.Contact_First_Name__c  &lt;&gt; Null, Opportunity__r.Contact_First_Name__c,
&apos;Valued Client&apos;))</formula>
        <inlineHelpText>Used as a mail merge for email templates</inlineHelpText>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Platform_Customizations__c</fullName>
        <description>Migrations : Customizations or changes the Client has made in their current store/platform that may or may not impact the success of the BC Store migration and launch</description>
        <inlineHelpText>Which are the customizations or changes the Client has made in their current store/platform that may or may not impact the success of the BC Store migration and launch? Select 1 or more (Ctrl + Click to select multiple values)</inlineHelpText>
        <label>Current Platform Customizations</label>
        <picklist>
            <picklistValues>
                <fullName>Database/Tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design / Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fields/Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers/Product Data Sources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other or 3rd Party Plugins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Store_API_Key__c</fullName>
        <description>Migrations : The API or Security Key for the Client&apos;s current store</description>
        <inlineHelpText>What is the API or Security Key for the Client&apos;s current store?</inlineHelpText>
        <label>Current Store API/Security Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Store_API_Password__c</fullName>
        <description>Migrations : needed for BC team to be able to access client&apos;s non-BC store</description>
        <label>Current Store API Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Store_Admin_ID__c</fullName>
        <description>Migrations : needed for BC team to be able to access client&apos;s non-BC store</description>
        <label>Current Store Admin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Store_Admin_Panel_URL__c</fullName>
        <description>Migrations : needed for BC team to be able to access client&apos;s non-BC store</description>
        <label>Current Store Admin Panel URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Current_Store_Admin_Password__c</fullName>
        <description>Migrations : needed for BC team to be able to access client&apos;s non-BC store</description>
        <label>Current Store Admin Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Store_URL__c</fullName>
        <description>Migrations : This is the client&apos;s current or source store URL, from which data will be migrated. This is NOT the BC Store URL.</description>
        <inlineHelpText>This is the client&apos;s current or source store URL, from which data will be migrated. This is NOT the BC Store URL.</inlineHelpText>
        <label>Current Store URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Current_User_Title__c</fullName>
        <formula>$User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Page_1__c</fullName>
        <label>Custom Page 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Page_2__c</fullName>
        <label>Custom Page 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Page_3__c</fullName>
        <label>Custom Page 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Page__c</fullName>
        <label>Custom Page</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that customer QA has been performed - requested via BAP-3143.</description>
        <inlineHelpText>Has Customer QA been performed?</inlineHelpText>
        <label>Customer QA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case. KB package field.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <inlineHelpText>KB package field. Store the emoticon as a text value.</inlineHelpText>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annoyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Case_Comment__c</fullName>
        <description>Formula calculating the amount of days between today and the date of last comment</description>
        <formula>(now() -  Last_Case_Comment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Case Comment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealbreakers__c</fullName>
        <description>Migrations : These are possible &quot;dealbreaker&quot; requirements the Client has in order to launch and keep their BC Store. They may be features/functionality/data structure/design/customization requirements the Client has in their current store and wants in BC.</description>
        <inlineHelpText>These are possible &quot;dealbreaker&quot; requirements the Client has in order to launch and keep their BC Store. They may be features/functionality/data structure/design/customization requirements the Client has in their current store and wants in BC.</inlineHelpText>
        <label>zCritical Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Shopping_Cart_Folder__c</fullName>
        <description>Migrations : Usually the www or public_html folder</description>
        <inlineHelpText>Usually the www or public_html folder</inlineHelpText>
        <label>zDefault Shopping Cart Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Use to transfer case ownership to other departmental queues; WFRs fire based on value</description>
        <inlineHelpText>Use to transfer case ownership to other departmental queues</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Design_Approved_By__c</fullName>
        <description>User who clicked the Design Approved button</description>
        <label>Design Approved By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Approved_Date__c</fullName>
        <description>Date when assigned to Design Approved the first time</description>
        <label>Design Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Denied_By__c</fullName>
        <description>User who clicked the Design Out of Scope button</description>
        <label>Design Denied By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Denied_Date__c</fullName>
        <description>Date when assigned to Design Out of Scope the first time</description>
        <label>Design Denied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Design_Escalated_By__c</fullName>
        <description>User who clicked the Design Support button</description>
        <label>Design Escalated By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Escalation_Date__c</fullName>
        <description>Date when assigned to Design Support the first time</description>
        <label>Design Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Looks at the recommend field to determine if client is a detractor.</description>
        <formula>IF (Recommend__c &lt; 7, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks at the recommend field to determine if client is a detractor.</inlineHelpText>
        <label>NPS Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cancellations</description>
        <inlineHelpText>To be checked when a saved store is moved from the discounted/save price back to normal</inlineHelpText>
        <label>Discount Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Support : used in WFRs for spam cases</description>
        <label>Do Not Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Support : used for open/shut cases created only to document a call where you DO NOT want an email sent to the client; filter used in WFRs</description>
        <inlineHelpText>Check this box for open/shut cases created only to document a call where you DO NOT want an email sent to the client</inlineHelpText>
        <label>Documentation Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Downgrade_Details__c</fullName>
        <inlineHelpText>Select specific reasons why the client downgraded.</inlineHelpText>
        <label>Downgrade Details</label>
        <picklist>
            <picklistValues>
                <fullName>Brick &amp; Mortar Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never got started/never launched store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Products to Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No/Low Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only Used as Test Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Reason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Too Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused to Disclose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unhappy with customer service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed up accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faceted search did not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics did not meet expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acct Manager did not meet expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLA did not meet expectations</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalBCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional BCC field.</description>
        <label>Additional BCC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalCC__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional CC field.</description>
        <label>Additional CC</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__AdditionalTo__c</fullName>
        <description>Stores email addresses entered on the New Comment page Additional To field. The SuppliedEmail (Web Email) value is added automatically on case creation if a valid Contact isn&apos;t associated.</description>
        <label>Additional To</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Case_Thread_Id__c</fullName>
        <description>A formula to generate the Salesforce Case Thread Id for display on detail pages or inclusion in email templates.</description>
        <formula>&quot;[ ref:_&quot; &amp; 
LEFT( $Organization.Id , 5) &amp; 
IF (MID ( $Organization.Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,10), 
IF (MID ( $Organization.Id, 7, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 9), 
IF (MID ( $Organization.Id, 8, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 8), 
IF (MID ( $Organization.Id, 9, 1)&lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 7), 
IF (MID ( $Organization.Id,10, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 6), 
IF (MID ($Organization.Id, 11, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id, 5), 
IF(MID ( $Organization.Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT($Organization.Id,4), 
IF (MID ( $Organization.Id, 13, 1) &lt;&gt; &quot;0&quot;,RIGHT($Organization.Id, 3), 
IF (MID ( $Organization.Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT($Organization.Id, 2), &quot;&quot;) ) ) ) ) ) ) ) )
&amp; &quot;._&quot; &amp;LEFT( Id, 5) &amp; 
IF(MID ( Id, 6, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 10), 
IF (MID ( Id, 7, 1)&lt;&gt; &quot;0&quot;, RIGHT(Id, 9), 
IF (MID ( Id, 8, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id,8), 
IF (MID ( Id, 9, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 7), 
IF (MID ( Id, 10,1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 6), 
IF (MID ( Id, 11, 1) &lt;&gt; &quot;0&quot;,RIGHT(Id, 5), 
IF (MID ( Id, 12, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 4), 
IF (MID( Id, 13, 1) &lt;&gt; &quot;0&quot;, RIGHT(Id, 3), 
IF (MID ( Id, 14, 1) &lt;&gt;&quot;0&quot;, RIGHT(Id, 2), &quot;&quot;) ) ) ) ) ) ) ) ) &amp; &quot;:ref ]&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Disable_Email_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this field to true disables the Email Distribution feature on a case by case basis if Email Distribution is enabled.</description>
        <label>Disable Email Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2CP__ExtraEmails__c</fullName>
        <description>Stores all email addresses on inbound emails. This data is used by Auto Create Contacts, Auto Add Case Team Members and Auto Add Contact Roles.</description>
        <label>ExtraEmails</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText_Inc_Private__c</fullName>
        <label>History Text Inc Private</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__HistoryText__c</fullName>
        <description>Contains a chronology of the most recent 25 public case comments (up to 32,000 chars) for inclusion in email templates. This field is updated when inbound emails are received and outbound emails are sent through the New Comment page.</description>
        <label>HistoryText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E2CP__Knowledge_Base_URL__c</fullName>
        <label>Knowledge Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E2CP__Most_Recent_Private_Comment__c</fullName>
        <description>Contains the most recent private comment, as it was typed, without any pre-pended recipients or attachments notations that may be added to the case comment record.</description>
        <label>Most Recent Private Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>